k8s-deploy/06-ruoyi-cloud/01-ruoyi-system-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruoyi-system
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ruoyi-system

  template:
    metadata:
      labels:
        app: ruoyi-system
    spec:
      imagePullSecrets:
      - name: harbor-admin

      volumes:
      - name: skywalking-agent
        emptyDir: {}

      # 接入Skwaling
      containers:
      - name: system
        image: harbor.oldxu.net/springcloud/ruoyi-system:v1.0
        volumeMounts:
        - name: skywalking-agent
          mountPath: /skywalking/
