k8s-deploy/06-ruoyi-cloud/02-ruoyi-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruoyi-auth
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ruoyi-auth

  template:
    metadata:
      labels:
        app: ruoyi-auth
    spec:
      imagePullSecrets:
      - name: harbor-admin

      volumes:
      - name: skywalking-agent
        emptyDir: {}

      # 接入Skwaling
      containers:
      - name: auth
        image: harbor.oldxu.net/springcloud/ruoyi-auth:v1.0
        volumeMounts:
        - name: skywalking-agent
          mountPath: /skywalking/
