k8s-deploy/06-ruoyi-cloud/03-ruoyi-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruoyi-gateway
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ruoyi-gateway

  template:
    metadata:
      labels:
        app: ruoyi-gateway
    spec:
      imagePullSecrets:
      - name: harbor-admin

      volumes:
      - name: skywalking-agent
        emptyDir: {}

      # 接入Skwaling
      containers:
      - name: gateway
        image: harbor.oldxu.net/springcloud/ruoyi-gateway:v1.0
        volumeMounts:
        - name: skywalking-agent
          mountPath: /skywalking/

---
apiVersion: v1
kind: Service
metadata:
  name: ruoyi-gateway-svc
  namespace: dev
spec:
  selector:
    app: ruoyi-gateway
  ports:
  - port: 8080
    targetPort: 8080
