k8s-deploy/06-ruoyi-cloud/04-ruoyi-monitor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruoyi-monitor
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ruoyi-monitor

  template:
    metadata:
      labels:
        app: ruoyi-monitor
    spec:
      imagePullSecrets:
      - name: harbor-admin

      volumes:
      - name: skywalking-agent
        emptyDir: {}

      # 接入Skwaling
      containers:
      - name: monitor
        image: harbor.oldxu.net/springcloud/ruoyi-monitor:v1.0
        volumeMounts:
        - name: skywalking-agent
          mountPath: /skywalking/

---
apiVersion: v1
kind: Service
metadata:
  name: ruoyi-monitor-svc
  namespace: dev
spec:
  selector:
    app: ruoyi-monitor
  ports:
  - name: http
    port: 9100
    targetPort: 9100

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-ingress
  namespace: dev
spec:
  ingressClassName: "nginx"
  rules:
  - host: monitor.oldxu.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ruoyi-monitor-svc
            port:
              name: http
