k8s-deploy/06-ruoyi-cloud/05-ruoyi-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruoyi-ui
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      imagePullSecrets:
      - name: harbor-admin

      volumes:
      - name: nginxconfs
        configMap:
          name: ruoyi-ui-conf

      containers:
      - name: ui
        image: harbor.oldxu.net/app/ruoyi-ui:v2.0
        imagePullPolicy: Always
        volumeMounts:
        - name: nginxconfs
          mountPath: /etc/nginx/conf.d/

---
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
  namespace: dev
spec:
  selector:
    app: ui
  ports:
  - name: http
    port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: dev
spec:
  ingressClassName: "nginx"
  rules:
  - host: ruoyi.oldxu.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-svc
            port:
              name: http
